# NeuralServe

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-serving.txt  requirements-training.txt
.github/workflows/: ci.yml  docker-build.yml
configs/: lora_config.yaml  server_config.yaml  training_config.yaml
data/: README.md  prepare_dataset.py
infra/: Dockerfile.serving  Dockerfile.training  docker-compose.yml  prometheus.yml
infra/grafana-provisioning/dashboards/: dashboards.yml
observability/: __init__.py  metrics.py  tracing.py
observability/dashboards/: neuralserve.json
scripts/: load_test.py  run_training.sh  start_server.sh
serving/: __init__.py  app.py  batch_engine.py  cache.py  inference.py  router.py  schemas.py
tests/integration/: test_api_endpoints.py  test_inference_pipeline.py
tests/unit/: test_batch_engine.py  test_cache.py  test_schemas.py
training/: __init__.py  callbacks.py  dataset.py  evaluate.py  lora_setup.py  trainer.py
